Misc tweaks.